fixed project github link

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 	
 	<p><input type="button" id="process" value="Process and download" /></p>
 	
-	<a href="https://github.com/tuntorius/mightier_amp#mightier-amp" target="_blank">Check out Mightier Amp at Github</a>
+	<a href="https://github.com/tuntorius/nux-ir-patcher#nux-ir-patcher" target="_blank">Project Github Repository</a>
 	<script src="fileSaver.min.js"></script>
 	<script src="main.js"></script>
   </body>
