Removed file length warnings - useless and annoying

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   <body>
 	<h2>Mighty Amp Custom IR patcher</h2>
 	<p>This tool allows you to replace any of the 19 NUX IRs inside the firmware with custom ones.</p>
-	<p>Upload your Mighty Plug/Air firmware and any IR wave files you want to use. The IRs must be in 32bit floating point format
-	(note that this is different from 32 bit PCM). NUX uses IRs with 2048 samples. If your files are longer or shorter they will be appended with silence/truncated. Note that I still haven't figured out whether the IRs are 1 channel 2048 samples or 2 channels 1024 samples each but the tool doesn't care and accepts both.
+	<p>Upload your Mighty Plug/Air firmware and any IR wave files you want to use. The IRs must be in mono 32bit floating point format
+	(note that this is different from 32 bit PCM). NUX uses IRs with 2048 samples. If your files are longer or shorter they will be appended with silence/truncated.
 	<p class="warning">Warning! Use at your own risk. Although I've thoroughly tested this tool I can't guarantee it won't produce broken firmware.
 	Firmware update is risky procedure, also using a modified firmware usually voids the warranty of the product!</p>
 	<table class="center">
